src/camera_control.rs


    /// 通过 GenTL Interface 枚举设备
    ///
    /// # 参数
    /// * `pstIFInfo` - Interface 信息
    /// * `pstDevList` - 设备列表（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设备列表的内存是在 SDK 内部分配的，多线程调用该接口时会进行设备列表内存的释放和申请，
    /// 建议尽量避免多线程枚举操作
    pub unsafe fn MV_CC_EnumDevicesByGenTL(
        pstIFInfo: *mut crate::MV_GENTL_IF_INFO,
        pstDevList: *mut crate::MV_GENTL_DEV_INFO_LIST,
    ) -> c_int;

    /// 通过 GenTL 设备信息创建设备句柄
    ///
    /// # 参数
    /// * `handle` - 设备句柄（输出参数）
    /// * `pstDevInfo` - 设备信息结构体指针
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 根据输入的设备信息，创建库内部必须的资源和初始化内部模块
    pub unsafe fn MV_CC_CreateHandleByGenTL(
        handle: *mut *mut c_void,
        pstDevInfo: *const crate::MV_GENTL_DEV_INFO,
    ) -> c_int;

    // ========================================================================
    // Part 11: 图像保存、格式转换等相关接口
    // ========================================================================

    /// 保存图片，支持 Bmp 和 Jpeg
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstSaveParam` - 保存图片参数结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过该接口可以将从设备采集到的原始图像数据转换成 JPEG 或者 BMP 等格式并存放在指定内存中，
    /// 然后用户可以将转换之后的数据直接保存成图片文件。
    ///
    /// 该接口调用无接口顺序要求，有图像源数据就可以进行转换，
    /// 可以先调用 MV_CC_GetOneFrameTimeout 或者 MV_CC_RegisterImageCallBackEx 设置回调函数，
    /// 获取一帧图像数据，然后再通过该接口转换格式。
    ///
    /// 该接口支持图像宽、高、总长最大至 UINT_MAX
    /// JPEG格式最大支持宽高为 65500
    pub unsafe fn MV_CC_SaveImageEx3(
        handle: *mut c_void,
        pstSaveParam: *mut crate::MV_SAVE_IMAGE_PARAM_EX3,
    ) -> c_int;

    /// 保存图像到文件
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstSaveFileParam` - 保存图片文件参数结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口支持 BMP/JPEG/PNG/TIFF。
    /// 该接口支持图像宽、高、总长最大至 UINT_MAX
    /// JPEG格式最大支持宽高为 65500
    pub unsafe fn MV_CC_SaveImageToFileEx(
        handle: *mut c_void,
        pstSaveFileParam: *mut crate::MV_SAVE_IMAGE_TO_FILE_PARAM_EX,
    ) -> c_int;

    /// 保存图像到文件（扩展版本 2，支持 4G 以上超大图）
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstImage` - 图像信息
    /// * `pSaveImageParam` - 存图参数
    /// * `pcImagePath` - 存图路径
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口支持 4G 以上超大图的 PNG/TIFF 存图，非超大图像支持 BMP/JPEG/TIFF/PNG
    /// JPEG格式最大支持宽高为 65500
    pub unsafe fn MV_CC_SaveImageToFileEx2(
        handle: *mut c_void,
        pstImage: *mut crate::MV_CC_IMAGE,
        pSaveImageParam: *mut crate::MV_CC_SAVE_IMAGE_PARAM,
        pcImagePath: *const c_char,
    ) -> c_int;

    /// 图像旋转
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstRotateParam` - 图像旋转参数结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口只支持 MONO8/RGB24/BGR24 格式数据的 90/180/270 度旋转
    pub unsafe fn MV_CC_RotateImage(
        handle: *mut c_void,
        pstRotateParam: *mut crate::MV_CC_ROTATE_IMAGE_PARAM,
    ) -> c_int;

    /// 图像翻转
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstFlipParam` - 图像翻转参数结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口只支持 MONO8/RGB24/BGR24 格式数据的垂直和水平翻转
    pub unsafe fn MV_CC_FlipImage(
        handle: *mut c_void,
        pstFlipParam: *mut crate::MV_CC_FLIP_IMAGE_PARAM,
    ) -> c_int;

    /// 像素格式转换
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstCvtParam` - 像素格式转换参数结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 通过将接口可以将从设备采集到的原始图像数据转换成用户所需的像素格式并存放在指定内存中。
    ///
    /// 该接口调用无接口顺序要求，有图像源数据就可以进行转换，
    /// 可以先调用 MV_CC_GetOneFrameTimeout 或者 MV_CC_RegisterImageCallBackEx 设置回调函数，
    /// 获取一帧图像数据，然后再通过该接口转换格式。
    ///
    /// 如果设备当前采集图像是 JPEG 压缩的格式，则不支持调用该接口进行转换。
    ///
    /// 该接口支持图像宽、高、总长最大至 UINT_MAX
    pub unsafe fn MV_CC_ConvertPixelTypeEx(
        handle: *mut c_void,
        pstCvtParam: *mut crate::MV_CC_PIXEL_CONVERT_PARAM_EX,
    ) -> c_int;

    /// 设置插值算法类型
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `nBayerCvtQuality` - Bayer 的插值方法  0-快速 1-均衡（默认为均衡）2-最优 3-最优 +
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设置内部图像转换接口的 Bayer 插值算法类型参数，
    /// MV_CC_ConvertPixelTypeEx、MV_CC_GetImageForRGB/BGR 接口内部使用的插值算法是该接口所设定的
    pub unsafe fn MV_CC_SetBayerCvtQuality(handle: *mut c_void, nBayerCvtQuality: c_uint) -> c_int;

    /// 插值算法平滑使能设置
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `bFilterEnable` - 平滑使能 (默认关闭)
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设置内部图像转换接口的贝尔插值平滑使能参数，
    /// MV_CC_ConvertPixelTypeEx、MV_CC_SaveImageEx3 接口内部使用的插值算法是该接口所设定的
    pub unsafe fn MV_CC_SetBayerFilterEnable(handle: *mut c_void, bFilterEnable: bool) -> c_int;

    /// 设置 Bayer 格式的 Gamma 值
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `fBayerGammaValue` - Gamma 值：0.1 ~ 4.0
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设置该值后，在调用 MV_CC_ConvertPixelTypeEx、MV_CC_SaveImageEx3、MV_CC_SaveImageToFileEx 接口
    /// 将 Bayer8/10/12/16 格式转成 RGB24/48，RGBA32/64，BGR24/48，BGRA32/64 时起效
    pub unsafe fn MV_CC_SetBayerGammaValue(handle: *mut c_void, fBayerGammaValue: f32) -> c_int;

    /// 设置 Mono8/Bayer8/10/12/16 格式的 Gamma 值
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `enSrcPixelType` - 像素格式，支持 PixelType_Gvsp_Mono8, Bayer8/10/12/16
    /// * `fGammaValue` - Gamma 值：0.1 ~ 4.0
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设置 Mono8 的 gamma 值后，在调用 MV_CC_ConvertPixelTypeEx 接口将 Mono8 转成 Mono8 时 gamma 值起效。
    ///
    /// 设置 Bayer8/10/12/16 的 gamma 值后，在调用 MV_CC_ConvertPixelTypeEx、MV_CC_SaveImageToFileEx、
    /// MV_CC_SaveImageEx3 接口将 Bayer8/10/12/16 转 RGB24/48，RGBA32/64，BGR24/48，BGRA32/64 时 gamma 值起效。
    ///
    /// 该接口兼容 MV_CC_SetBayerGammaValue 接口，新增支持 Mono8 像素格式
    pub unsafe fn MV_CC_SetGammaValue(
        handle: *mut c_void,
        enSrcPixelType: crate::MvGvspPixelType,
        fGammaValue: f32,
    ) -> c_int;

    /// 设置 Bayer 格式的 Gamma 信息
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstGammaParam` - Gamma 信息
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 设置该信息后，在调用 MV_CC_ConvertPixelTypeEx、MV_CC_SaveImageEx3、MV_CC_SaveImageToFileEx 接口
    /// 将 Bayer8/10/12/16 格式转成 RGB24/48，RGBA32/64，BGR24/48，BGRA32/64 时 Gamma 值起效
    pub unsafe fn MV_CC_SetBayerGammaParam(
        handle: *mut c_void,
        pstGammaParam: *mut crate::MV_CC_GAMMA_PARAM,
    ) -> c_int;

    /// 设置 Bayer 格式的 CCM 使能和矩阵，量化系数默认 1024
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstCCMParam` - CCM 参数
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 开启 CCM 并设置 CCM 矩阵后，在调用 MV_CC_ConvertPixelTypeEx、MV_CC_SaveImageEx3 接口
    /// 将 Bayer8/10/12/16 格式转成 RGB24/48，RGBA32/64，BGR24/48，BGRA32/64 时起效
    pub unsafe fn MV_CC_SetBayerCCMParam(
        handle: *mut c_void,
        pstCCMParam: *mut crate::MV_CC_CCM_PARAM,
    ) -> c_int;

    /// 设置 Bayer 格式的 CCM 使能和矩阵
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstCCMParam` - CCM 参数
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 开启 CCM 并设置 CCM 矩阵后，在调用 MV_CC_ConvertPixelTypeEx、MV_CC_SaveImageEx3 接口
    /// 将 Bayer8/10/12/16 格式转成 RGB24/48，RGBA32/64，BGR24/48，BGRA32/64 时起效
    pub unsafe fn MV_CC_SetBayerCCMParamEx(
        handle: *mut c_void,
        pstCCMParam: *mut crate::MV_CC_CCM_PARAM_EX,
    ) -> c_int;

    /// 图像对比度调节
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstContrastParam` - 对比度调节参数（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_ImageContrast(
        handle: *mut c_void,
        pstContrastParam: *mut crate::MV_CC_CONTRAST_PARAM,
    ) -> c_int;

    /// 图像去紫边
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstPurpleFringingParam` - 去紫边参数（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 像素格式仅支持 PixelType_Gvsp_RGB8_Packed 和 PixelType_Gvsp_BGR8_Packed
    pub unsafe fn MV_CC_PurpleFringing(
        handle: *mut c_void,
        pstPurpleFringingParam: *mut crate::MV_CC_PURPLE_FRINGING_PARAM,
    ) -> c_int;

    /// 设置 ISP 参数
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstParam` - ISP 配置参数
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_SetISPConfig(
        handle: *mut c_void,
        pstParam: *mut crate::MV_CC_ISP_CONFIG_PARAM,
    ) -> c_int;

    /// 对图像进行 ISP 算法处理
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstInputImage` - 输入图像结构体
    /// * `pstOutputImage` - 输出图像结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 需要先调用 MV_CC_SetISPConfig 传入配置文件，配置文件由 ISP 工具生成
    pub unsafe fn MV_CC_ISPProcess(
        handle: *mut c_void,
        pstInputImage: *mut crate::MV_CC_IMAGE,
        pstOutputImage: *mut crate::MV_CC_IMAGE,
    ) -> c_int;

    /// 无损解码
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstDecodeParam` - 无损解码参数结构体（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 将从相机中取到的无损压缩码流解码成裸数据，同时支持解析当前相机实时图像的水印信息
    /// （如果输入的无损码流不是当前相机或者不是实时取流的，则水印解析可能异常）。
    ///
    /// 若解码失败，请检查以下情况：
    /// （1）需要 CPU 支持 SSE AVX 指令集
    /// （2）若当前帧异常（丢包等），可能导致解码异常
    /// （3）相机出图异常，即使不丢包也会异常
    pub unsafe fn MV_CC_HB_Decode(
        handle: *mut c_void,
        pstDecodeParam: *mut crate::MV_CC_HB_DECODE_PARAM,
    ) -> c_int;

    /// 在图像上绘制矩形框辅助线
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pRectInfo` - 矩形辅助线的信息
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口仅支持 windows 平台
    pub unsafe fn MV_CC_DrawRect(
        handle: *mut c_void,
        pRectInfo: *mut crate::MVCC_RECT_INFO,
    ) -> c_int;

    /// 在图像上绘制圆形辅助线
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pCircleInfo` - 圆形辅助线的信息
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口仅支持 windows 平台
    pub unsafe fn MV_CC_DrawCircle(
        handle: *mut c_void,
        pCircleInfo: *mut crate::MVCC_CIRCLE_INFO,
    ) -> c_int;

    /// 在图像上绘制线条
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pLinesInfo` - 线条辅助线信息
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口仅支持 windows 平台
    pub unsafe fn MV_CC_DrawLines(
        handle: *mut c_void,
        pLinesInfo: *mut crate::MVCC_LINES_INFO,
    ) -> c_int;

    /// 开始录像
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstRecordParam` - 录像参数结构体
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 该接口最大支持 Width*Height 为 8000*8000 大小，否则会导致调用 MV_CC_InputOneFrame 接口错误
    pub unsafe fn MV_CC_StartRecord(
        handle: *mut c_void,
        pstRecordParam: *mut crate::MV_CC_RECORD_PARAM,
    ) -> c_int;

    /// 输入录像数据
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstInputFrameInfo` - 录像数据结构体
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_InputOneFrame(
        handle: *mut c_void,
        pstInputFrameInfo: *mut crate::MV_CC_INPUT_FRAME_INFO,
    ) -> c_int;

    /// 停止录像
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_StopRecord(handle: *mut c_void) -> c_int;
